--- a/tp2/ansible/.ssh-config
+++ b/tp2/ansible/.ssh-config
@@ -1,9 +1,8 @@
 Host 10.2.1.*
-  User "vagrant"
+  User vagrant
   IdentityFile "/Users/dev/.ssh/id_rsa"
   UserKnownHostsFile /dev/null
   StrictHostKeyChecking no
   PasswordAuthentication no
   IdentitiesOnly yes
   LogLevel FATAL
-
