--- a/tp3/vagrant/Vagrantfile
+++ b/tp3/vagrant/Vagrantfile
@@ -1,15 +1,12 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "rocky-ynov"
   config.vm.provision "file", source: "/Users/dev/.ssh/id_rsa.pub", destination: "~/.ssh/authorized_keys"
+  config.vm.provision "shell", path: "setup.sh"
   config.vm.synced_folder ".", "/vagrant", disabled: false
   config.ssh.insert_key = false
   config.ssh.username = "vagrant"
 
-  config.vm.define "node1.tp2.lab" do |first|
-    first.vm.network "private_network", ip: "10.2.1.11"
-  end
-
-  config.vm.define "node2.tp2.lab" do |second|
-    second.vm.network "private_network", ip: "10.2.1.12"
+  config.vm.define "node.iPXE.server" do |first|
+    first.vm.network "private_network", ip: "10.3.1.11"
   end
 end
