--- a/tp2/vagrant/Vagrantfile
+++ b/tp2/vagrant/Vagrantfile
@@ -1,12 +1,14 @@
 Vagrant.configure("2") do |config|
 
-  config.vm.box = "marcinbojko/rockylinux9_arm64"
-  config.vm.box_check_update = false 
-  config.vm.synced_folder ".", "/vagrant", disabled: false
-  config.vm.provision "shell", path: "setup.sh"
-  config.ssh.insert_key = false
-  config.vm.provision "file", source: "/Users/dev/.ssh/id_rsa.pub", destination: "~/.ssh/authorized_keys"
-  config.ssh.username = "vagrant"
+  # config.vm.box = "marcinbojko/rockylinux9_arm64"
+  # config.vm.box_check_update = false 
+  # config.vm.synced_folder ".", "/vagrant", disabled: false
+  # config.vm.provision "shell", path: "setup.sh"
+  # config.ssh.insert_key = false
+  # config.vm.provision "file", source: "/Users/dev/.ssh/id_rsa.pub", destination: "~/.ssh/authorized_keys"
+  # config.ssh.username = "vagrant"
+
+  config.vm.box = "rocky-ynov"
 
   config.vm.define "git reflog
   node1.tp2.lab" do |first|
